[iPadOS] unable to reorder tabs on `*.mybinder.org` https://bugs.webkit.org/show_bug.cgi?id=224034 <rdar://problem/51770057>

Reviewed by Brent Fulgham.

* page/Quirks.h:
* page/Quirks.cpp:
(WebCore::Quirks::shouldDispatchSimulatedMouseEvents const):
(WebCore::Quirks::shouldDispatchedSimulatedMouseEventsAssumeDefaultPrevented const):
(WebCore::Quirks::simulatedMouseEventTypeForTarget const):
Modify `Quirks::shouldDispatchSimulatedMouseEvents` to accept an `EventTarget` so that we
can limit dispatching touch events as mouse events on `*.mybinder.org` to only the tab bar.

* dom/EventNames.h:
(WebCore::EventNames::isTouchRelatedEventType const):
* dom/Node.cpp:
(WebCore::Node::moveNodeToNewDocument):
(WebCore::tryAddEventListener):
(WebCore::tryRemoveEventListener):
(WebCore::Node::defaultEventHandler):
* page/DOMWindow.cpp:
(WebCore::DOMWindow::addEventListener):
(WebCore::DOMWindow::removeEventListener):
Pass in the `EventTarget` when calling `Quirks::shouldDispatchSimulatedMouseEvents`.


Canonical link: https://commits.webkit.org/236094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275431 268f45cc-cd09-0410-ab3c-d52691b4dbfc